packages/lightning_db_dart/lib/src/native/lightning_db_bindings.dart

// AUTO-GENERATED FILE. DO NOT MODIFY.
//
// Generated by `dart run ffigen`.
// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
//
// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Lightning DB native library bindings
class LightningDbBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LightningDbBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LightningDbBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int lightning_db_abort_transaction(
    int handle,
  ) {
    return _lightning_db_abort_transaction(
      handle,
    );
  }

  late final _lightning_db_abort_transactionPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'lightning_db_abort_transaction');
  late final _lightning_db_abort_transaction =
      _lightning_db_abort_transactionPtr.asFunction<int Function(int)>();

  int lightning_db_begin_transaction(
    int db_handle,
    ffi.Pointer<ffi.Uint64> out_handle,
  ) {
    return _lightning_db_begin_transaction(
      db_handle,
      out_handle,
    );
  }

  late final _lightning_db_begin_transactionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64,
              ffi.Pointer<ffi.Uint64>)>>('lightning_db_begin_transaction');
  late final _lightning_db_begin_transaction =
      _lightning_db_begin_transactionPtr
          .asFunction<int Function(int, ffi.Pointer<ffi.Uint64>)>();

  int lightning_db_checkpoint(
    int handle,
  ) {
    return _lightning_db_checkpoint(
      handle,
    );
  }

  late final _lightning_db_checkpointPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'lightning_db_checkpoint');
  late final _lightning_db_checkpoint =
      _lightning_db_checkpointPtr.asFunction<int Function(int)>();

  void lightning_db_clear_error() {
    return _lightning_db_clear_error();
  }

  late final _lightning_db_clear_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'lightning_db_clear_error');
  late final _lightning_db_clear_error =
      _lightning_db_clear_errorPtr.asFunction<void Function()>();

  int lightning_db_close(
    int handle,
  ) {
    return _lightning_db_close(
      handle,
    );
  }

  late final _lightning_db_closePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'lightning_db_close');
  late final _lightning_db_close =
      _lightning_db_closePtr.asFunction<int Function(int)>();

  int lightning_db_commit_transaction(
    int handle,
  ) {
    return _lightning_db_commit_transaction(
      handle,
    );
  }

  late final _lightning_db_commit_transactionPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'lightning_db_commit_transaction');
  late final _lightning_db_commit_transaction =
      _lightning_db_commit_transactionPtr.asFunction<int Function(int)>();

  int lightning_db_create(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Uint64> out_handle,
  ) {
    return _lightning_db_create(
      path,
      out_handle,
    );
  }

  late final _lightning_db_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint64>)>>('lightning_db_create');
  late final _lightning_db_create = _lightning_db_createPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint64>)>();

  int lightning_db_create_with_config(
    ffi.Pointer<ffi.Char> path,
    int cache_size,
    int compression_type,
    int wal_sync_mode,
    ffi.Pointer<ffi.Uint64> out_handle,
  ) {
    return _lightning_db_create_with_config(
      path,
      cache_size,
      compression_type,
      wal_sync_mode,
      out_handle,
    );
  }

  late final _lightning_db_create_with_configPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Int32,
              ffi.Int32,
              ffi.Pointer<ffi.Uint64>)>>('lightning_db_create_with_config');
  late final _lightning_db_create_with_config =
      _lightning_db_create_with_configPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>, int, int, int, ffi.Pointer<ffi.Uint64>)>();

  int lightning_db_delete(
    int handle,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
  ) {
    return _lightning_db_delete(
      handle,
      key,
      key_len,
    );
  }

  late final _lightning_db_deletePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>>('lightning_db_delete');
  late final _lightning_db_delete = _lightning_db_deletePtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  int lightning_db_delete_tx(
    int handle,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
  ) {
    return _lightning_db_delete_tx(
      handle,
      key,
      key_len,
    );
  }

  late final _lightning_db_delete_txPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>>('lightning_db_delete_tx');
  late final _lightning_db_delete_tx = _lightning_db_delete_txPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  void lightning_db_free_bytes(
    ByteResult result,
  ) {
    return _lightning_db_free_bytes(
      result,
    );
  }

  late final _lightning_db_free_bytesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ByteResult)>>(
          'lightning_db_free_bytes');
  late final _lightning_db_free_bytes =
      _lightning_db_free_bytesPtr.asFunction<void Function(ByteResult)>();

  void lightning_db_free_key_value(
    KeyValueResult result,
  ) {
    return _lightning_db_free_key_value(
      result,
    );
  }

  late final _lightning_db_free_key_valuePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(KeyValueResult)>>(
          'lightning_db_free_key_value');
  late final _lightning_db_free_key_value = _lightning_db_free_key_valuePtr
      .asFunction<void Function(KeyValueResult)>();

  void lightning_db_free_string(
    ffi.Pointer<ffi.Char> str,
  ) {
    return _lightning_db_free_string(
      str,
    );
  }

  late final _lightning_db_free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'lightning_db_free_string');
  late final _lightning_db_free_string = _lightning_db_free_stringPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  ByteResult lightning_db_get(
    int handle,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
  ) {
    return _lightning_db_get(
      handle,
      key,
      key_len,
    );
  }

  late final _lightning_db_getPtr = _lookup<
      ffi.NativeFunction<
          ByteResult Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>>('lightning_db_get');
  late final _lightning_db_get = _lightning_db_getPtr
      .asFunction<ByteResult Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  ffi.Pointer<ffi.Char> lightning_db_get_last_error() {
    return _lightning_db_get_last_error();
  }

  late final _lightning_db_get_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'lightning_db_get_last_error');
  late final _lightning_db_get_last_error = _lightning_db_get_last_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  int lightning_db_get_last_error_buffer(
    ffi.Pointer<ffi.Char> buffer,
    int buffer_len,
  ) {
    return _lightning_db_get_last_error_buffer(
      buffer,
      buffer_len,
    );
  }

  late final _lightning_db_get_last_error_bufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Char>,
              ffi.UintPtr)>>('lightning_db_get_last_error_buffer');
  late final _lightning_db_get_last_error_buffer =
      _lightning_db_get_last_error_bufferPtr
          .asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  ByteResult lightning_db_get_tx(
    int handle,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
  ) {
    return _lightning_db_get_tx(
      handle,
      key,
      key_len,
    );
  }

  late final _lightning_db_get_txPtr = _lookup<
      ffi.NativeFunction<
          ByteResult Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>,
              ffi.UintPtr)>>('lightning_db_get_tx');
  late final _lightning_db_get_tx = _lightning_db_get_txPtr
      .asFunction<ByteResult Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  ByteResult lightning_db_get_with_consistency(
    int handle,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
    int consistency_level,
  ) {
    return _lightning_db_get_with_consistency(
      handle,
      key,
      key_len,
      consistency_level,
    );
  }

  late final _lightning_db_get_with_consistencyPtr = _lookup<
      ffi.NativeFunction<
          ByteResult Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>, ffi.UintPtr,
              ffi.Int32)>>('lightning_db_get_with_consistency');
  late final _lightning_db_get_with_consistency =
      _lightning_db_get_with_consistencyPtr.asFunction<
          ByteResult Function(int, ffi.Pointer<ffi.Uint8>, int, int)>();

  /// Function declarations
  int lightning_db_init() {
    return _lightning_db_init();
  }

  late final _lightning_db_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('lightning_db_init');
  late final _lightning_db_init =
      _lightning_db_initPtr.asFunction<int Function()>();

  int lightning_db_iterator_close(
    int handle,
  ) {
    return _lightning_db_iterator_close(
      handle,
    );
  }

  late final _lightning_db_iterator_closePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'lightning_db_iterator_close');
  late final _lightning_db_iterator_close =
      _lightning_db_iterator_closePtr.asFunction<int Function(int)>();

  KeyValueResult lightning_db_iterator_next(
    int handle,
  ) {
    return _lightning_db_iterator_next(
      handle,
    );
  }

  late final _lightning_db_iterator_nextPtr =
      _lookup<ffi.NativeFunction<KeyValueResult Function(ffi.Uint64)>>(
          'lightning_db_iterator_next');
  late final _lightning_db_iterator_next =
      _lightning_db_iterator_nextPtr.asFunction<KeyValueResult Function(int)>();

  int lightning_db_open(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Uint64> out_handle,
  ) {
    return _lightning_db_open(
      path,
      out_handle,
    );
  }

  late final _lightning_db_openPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint64>)>>('lightning_db_open');
  late final _lightning_db_open = _lightning_db_openPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Uint64>)>();

  int lightning_db_put(
    int handle,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> value,
    int value_len,
  ) {
    return _lightning_db_put(
      handle,
      key,
      key_len,
      value,
      value_len,
    );
  }

  late final _lightning_db_putPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64, ffi.Pointer<ffi.Uint8>, ffi.UintPtr,
              ffi.Pointer<ffi.Uint8>, ffi.UintPtr)>>('lightning_db_put');
  late final _lightning_db_put = _lightning_db_putPtr.asFunction<
      int Function(
          int, ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>, int)>();
